then create a Form_controller to /parents folder. add common functions to Form controller.

@todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
@todo .. Global controllers pattern extends rules ..!!!
@todo .. put archived doc meta tag to old user guide base layout ..
@todo .. look at globally set database object from app_controller.
@todo .. change obullo mvc2 names as Obullo GC in web site.                                                   
@todo .. session database sql SET userdata field CHARACTER as utf8 into user_guide
CREATE TABLE `ob_sessions` (
  `user_data` text character set utf8 NOT NULL,
) 

NEXT VERSION
----------------------------------------------------------------

@next version todo .. utf8 support http://www.phpwact.org/php/i18n/utf-8
@next version todo .. look at include ob_error.php errors when someone use third party session library.
@next version todo .. if not posted a variable in form_validate class add it to log debug msg..
this variable not posted !!! .. 
@next version todo .. implement session database driver with native sessions .. 
@next version todo .. implement Parser and Agent Class as Php5 and move them into /php5 folder.
@next version todo .. add $this->config->set_item('log_threshold', 1); to log helper, we will control it in app_controller
@next version todo .. zend and some kohana libraries load support (important)
@next version todo .. add LOG users messages level '5' => 'REPORT', , change fopen write log, add error_log() func. 
@next version todo .. logging for exceptions, exception reports
@next version todo .. driver files for security helper.. xss functions .. i_post('', callback_func);
@next version todo .. memcache or shmop session memory container.
@next version todo .. db_item() function should be set in config class, so user can change database config 
items globally like this in global_controller ..
$this->config->set_db_item();