@@ -37,7 +37,7 @@ $database['db']['options']  = array();  // Example:  array( PDO::ATTR_PERSISTENT
 $database['db2']['hostname'] = "localhost";
 $database['db2']['username'] = "root";
 $database['db2']['password'] = "";
-$database['db2']['database'] = "";
+$database['db2']['database'] = "cdcol";
 $database['db2']['dbdriver'] = "mysql";
 $database['db2']['dbh_port'] = "";
 $database['db2']['char_set'] = "utf8";
