@@ -3,14 +3,15 @@
 $lang['profiler_database_var']      = 'Database Variable';
 $lang['profiler_controller_info']   = 'Directory / Class / Method';
 $lang['profiler_benchmarks']        = 'Benchmarks';
+$lang['profiler_database']          = 'Database';
 $lang['profiler_queries']           = 'Queries';
 $lang['profiler_get_data']          = 'GET Data';
 $lang['profiler_post_data']         = 'POST Data';
 $lang['profiler_uri_string']        = 'URI String';
 $lang['profiler_memory_usage']      = 'Memory Usage';
-$lang['profiler_loaded_files']      = 'Loaded Files';    // ( Obullo changes ) ..
+$lang['profiler_loaded_files']      = 'Loaded Files'; 
 $lang['profiler_no_db']             = 'Database driver is not currently loaded';
-$lang['profiler_no_queries']        = 'No queries were run';
+$lang['profiler_no_queries']        = 'No Queries Were Run';
 $lang['profiler_no_post']           = 'No POST data exists';
 $lang['profiler_no_get']            = 'No GET data exists';
 $lang['profiler_no_uri']            = 'No URI data exists';
